force-app/main/default/objects/RD_STCCrossRef__c/RD_STCCrossRef__c.object-meta.xml
<CustomObject>
    <label>RD STCCrossRef</label>
    <nameField>
        <label>RD STCCrossRef</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RD STCCrossRef</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>