force-app/main/default/objects/RD_STCCrossRef__c/fields/RefSTC1__c.field-meta.xml
<CustomField>
    <fullName>RefSTC1__c</fullName>
    <label>RefSTC1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>