force-app/main/default/objects/RD_STCCrossRef__c/fields/RefSTC5__c.field-meta.xml
<CustomField>
    <fullName>RefSTC5__c</fullName>
    <label>RefSTC5</label>
    <length>255</length>
    <type>Text</type>
</CustomField>