force-app/main/default/objects/RD_STCCrossRef__c/fields/RefSTC6__c.field-meta.xml
<CustomField>
    <fullName>RefSTC6__c</fullName>
    <label>RefSTC6</label>
    <length>255</length>
    <type>Text</type>
</CustomField>